# Calculator

./: CMakeLists.txt  main.cpp
mainWindow/: mainWindow.cpp  mainWindow.h
mainWindow/buttons/: button.cpp  button.h
mainWindow/math/: math.cpp  math.h
